quick alignment fix

--- a/src/styles/abstract/_variables.scss
+++ b/src/styles/abstract/_variables.scss
@@ -17,5 +17,6 @@ $color-gray-dark: #777;
 $color-dark: #333;
 $color-black: #000;
 
-$box-shadow: 0 1rem 2rem rgba(0,0,0,.3);
+$box-shadow: 0 1rem 2.5rem rgba(0,0,0,.25);
+$box-shadow-dark: 0 1rem 2rem rgba(0,0,0,.3);
 $border-radius: 3px;
